--- a/Lab8/templates/layout.html
+++ b/Lab8/templates/layout.html
@@ -35,7 +35,7 @@
             <h2>Welcome {{ current_user.name }}!</h2>
             <div>
                 <h3>ACME University</h3>
-                <a href="{{ url_for('logout') }}" class="btn btn-sm btn-outline-secondary">Sign out</a>
+                <a href="{{ url_for('auth.logout') }}" class="btn btn-sm btn-outline-secondary">Sign out</a>
             </div>
         </div>
         {% endif %}
