--- a/Lab8/templates/teacher_dashboard.html
+++ b/Lab8/templates/teacher_dashboard.html
@@ -23,7 +23,7 @@
                 <td>{{ course.time }}</td>
                 <td>{{ course.enrolled }}/{{ course.capacity }}</td>
                 <td>
-                    <a href="{{ url_for('course_details', course_id=course.id) }}" class="btn btn-sm btn-info">View Students</a>
+                    <a href="{{ url_for('teacher_bp.course_details', course_id=course.id) }}" class="btn btn-sm btn-info">View Students</a>
                 </td>
             </tr>
             {% endfor %}
