--- a/Lab8/templates/login.html
+++ b/Lab8/templates/login.html
@@ -17,7 +17,9 @@
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                    <button type="submit" class="btn btn-block" style="background-color: #ff69b4; color: white; border-radius: 20px; font-weight: bold; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                        Sign in
+                    </button>
                 </form>
             </div>
         </div>
