--- a/Lab8/templates/login.html
+++ b/Lab8/templates/login.html
@@ -5,7 +5,7 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-header text-center">
-                <h3>ACME University</h3>
+                <h3>尘埃落定 University</h3>
             </div>
             <div class="card-body">
                 <form method="post">
